[package]
name = "pmfp-collections"
version = "0.1.0"
authors = ["kyleheadley <kyle.headley@colorado.edu>"]

[dependencies]
rand = "0.3"
clap = "2"
time = "0.1"
pat = {git = "https://github.com/kyleheadley/pat"}

[dependencies.adapton]
git = "https://github.com/cuplv/adapton.rust.git"
branch = "dev"
