[package]
name = "iodyn"
version = "0.2.0"
authors = [
	"Kyle Headley <kyle.headley@colorado.edu>",
	"Matthew A. Hammer <Matthew.Hammer@Colorado.Edu>"
]
description = "An incremental collections library making use of Adapton"
documentation = "https://docs.rs/iodyn"
homepage = "http://adapton.org"
repository = "https://github.com/cuplv/iodyn.rust"
readme = "README.md"
keywords = ["incremental","adapton","sequence","RAZ","memoization"]
categories = ["data-structures"]
exclude = ["travis.sh"]

[badges]
travis-ci = { repository = "https://github.com/cuplv/iodyn.rust" }

[dependencies]
rand = "0.3"
adapton = "0.3"
